# rpicam-apps

./: .gitignore
apps/: meson.build  rpicam_hello.cpp
core/: rpicam_app.cpp
